@@ -741,6 +741,13 @@ for border removal).</p>
       <td>Planes are shifted</td>
     </tr>
     <tr>
+      <td>TOS Crew:
+      <a href="http://pouet.net/prod.php?which=29074">4-pixel plasma screen</a></td>
+      <td>1.8</td>
+      <td>This demo features some 4 pixels color changes on STF, instead of the usual
+	8 pixels minimum width</td>
+    </tr>
+    <tr>
       <td>Unlimited Matricks:
       <a href="http://pouet.net/prod.php?which=11349">Dark Side Of The Spoon</a></td>
       <td>1.0</td>
