@@ -12,6 +12,7 @@ Emulation:
   - Use high res when ff8260 is set to 3
   - Randomly return 0 or 1 when reading unused bits 3,7 and 11 of color registers
   - Better detection of bottom border removal on a 60 Hz screen
+  - support for color change during only 4 cycles
 - CPU changes :
   - Fix a case when MFP's interrupt happens during the IACK sequence for HBL/VBL
 - Fix READ CAPACITY command result for ACSI hard disk images
@@ -76,6 +77,7 @@ Fixed demos :
   The World Is My Oyster - Convention Report Part by Aura (video, res=3)
   UMD 8730 by PHF (video, unused bits in STF color registers)
   It's A Girl 2 by Paradox (video, bottom border removal on a 60 Hz screen)
+  4-pixel plasma screen by TOS Crew (video, color change during only 4 cyles)
 
 Fixed games :
   Reeking Rubber (by Nature), Falcon game
